# ha-indexa-capital

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: hassfest.yml  validate.yml
custom_components/indexa_capital/: __init__.py  api.py  backfill.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  sensor.py  services.py  services.yaml  strings.json
custom_components/indexa_capital/translations/: en.json
scripts/: smoke_test.py
tests/: conftest.py  test_api.py  test_api_normalization.py  test_backfill.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_sensor.py  test_services.py
